--- a/gaj-data-analysis/research/MarkovModels/markov-model-notes.tex
+++ b/gaj-data-analysis/research/MarkovModels/markov-model-notes.tex
@@ -241,7 +241,7 @@ Despite not knowing these dependencies in advance, however, the basic form of th
 The first requirement is that the sequence process be {\em causal}, meaning that each stage of a sequence
 (including the termination stage but excluding the initiation stage) depends only on the preceding stages, and never on future stages.
 This causality allows us to split a generated sequence into two parts at some arbitrary {\em pivot} stage $t$, as shown in Figure~\ref{fig:forwar-backard}. The second requirement is that the dependence on past stages can be limited
-in scope to some arbitray {\em historical} stage $s$, as also shown.
+in scope to some arbitrary {\em historical} stage $s$, as also shown.
 \begin{figure}[hbt]
 \centering
 \begin{tikzpicture}[cnode/.style={draw,circle,minimum size=3em,inner sep=3pt}, onode/.style={fill=black!50, draw,circle,minimum size=1em}]
@@ -284,7 +284,7 @@ one step of the forward--backward algorithm.}
 
 Let us now define the sub-sequence $\vr_{s,t}=(r_s,r_{s+1},\ldots,r_t)$; by definition,
 $\vr_{s,t}=(\,)$ if $s>t$.
-Then observe that
+Then observe, for a sufficiently long sequence, that
 \begin{eqnarray}
 p(\ui,\uvr,\ut) 
 & = &
@@ -413,18 +413,18 @@ p(\iota_0)
 \left\{\prod_{t=1}^{m}p(\tm_t,r_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vr_{1,t-1})\right\}
 \left\{\prod_{t=m+1}^{n}p(\tm_t,r_t\,|\,\vec{\tau}^-_{t-m,t-1},\vr_{t-m,t-1})\right\}
 \nonumber\\&&
- p^*(\tau_{n+1}\,|\,\iota_0,\vec{\tau}^-_{1,n},\vr_{1,n})
+{}\times p_m^*(\tau_{n+1}\,|\,\iota_0,\vec{\tau}^-_{1,n},\vr_{1,n})
 \,,
 \label{eq:m-th-order}
 \end{eqnarray}
 where
 \begin{eqnarray}
- p^*(\tau_{n+1}\,|\,\iota_0,\vec{\tau}^-_{1,n},\vr_{1,n}) & = & \left\{\begin{array}{ll}
- p(\tau_{n+1}\,|\,\iota_0,\vec{\tau}^-_{1,n},\vr_{1,n})\,, &
-\mbox{ for $n<m$}\,,
+ p_m^*(\cdot\,|\,\iota_0,\vec{\tau}^-_{1,t},\vr_{1,t}) & = & \left\{\begin{array}{ll}
+ p(\cdot\,|\,\iota_0,\vec{\tau}^-_{1,t},\vr_{1,t})\,, &
+\mbox{ for $t<m$}\,,
 \\
- p(\tau_{n+1}\,|\,\vec{\tau}^-_{n-m+1,n},\vr_{n-m+1,n})\,, &
-\mbox{ for $n\ge m$}
+ p(\cdot\,|\,\vec{\tau}^-_{t-m+1,t},\vr_{t-m+1,t})\,, &
+\mbox{ for $t\ge m$}
 \end{array}\right.\,.
 \end{eqnarray}
 In the special case of $m=1$, the first-order Markov model,
@@ -484,15 +484,27 @@ The second-order Markov sequence process, for example, is depicted in Figure~\re
 The basic description of the forward--backward algorithm in Section~\ref{sec:forward-backward-basic}
 can now be refined under the restriction of the general, causal sequence process to an $m$-th order Markov process.
 Specifically, we take the limiting historical stage to be $s=\max(1, t-m+1)$ for $t>0$ (i.e.\ non-empty sequences).
-Then, for the initial stages $t<m$, the forward factor~\eqref{eq:fwd-pass-basic} becomes
+Then, for the initial stages $t<m$, for $m>1$, the forward factor~\eqref{eq:fwd-pass-basic} becomes
 \begin{eqnarray}
 \alpha_t(\vr_{1,t}) & = & p(\iota_0,\tm_1,r_1,\ldots,\tm_t,r_t)
-\nonumber\\& = &
-%\sum_{\iota_0=0}^{1}\delta(\iota_0\!=\!\ui)\,
-p(\iota_0)\,\prod_{i=1}^{t}p(\tm_i,r_i\,|\,\iota_0,\vec{\tau}^-_{1,i-1},\vr_{1,i-1})\,,
+%\nonumber\\& = &
+~=~
+p(\iota_0)\,\prod_{i=1}^{t}p(\tm_i,r_i\,|\,\iota_0,\vec{\tau}^-_{1,i-1},\vr_{1,i-1})\,.
 \label{eq:fwd-pass-m-init}
 \end{eqnarray}
-whereas for later stages $t\ge m$, we obtain
+Furthermore, if $t<m-1$ then at stage $t+1$ we have
+\begin{eqnarray}
+\alpha_{t+1}(\vr_{1,t+1}) & = & p(\iota_0,\tm_1,r_1,\ldots,\tm_{t+1},r_{t+1})
+~=~
+p(\iota_0)\,\prod_{i=1}^{t+1}p(\tm_i,r_i\,|\,\iota_0,\vec{\tau}^-_{1,i-1},\vr_{1,i-1})
+\nonumber\\& = &
+\alpha_t(\vr_{1,t})\,p(\tm_{t+1},r_{t+1}\,|\,\iota_0,\vec{\tau}^-_{1,t},\vr_{1,t})\,.
+\end{eqnarray}
+Note that for $m>1$ the forward pass commences from
+\begin{eqnarray}
+\alpha_1(r_1) & = &  p(\iota_0)\,p(\tm_1,r_1\,|\,\iota_0)\,.
+\end{eqnarray}
+However, if the sequence is sufficiently long, then for later stages $t\ge m$ we obtain
 \begin{eqnarray}
 \!\!\!
 \alpha_t(\vr_{t-m+1,t}) & = & p(\ui,\tm_1,\ur_1,\ldots,\tm_{t-m},\ur_{t-m},\tm_{t-m+1},r_{t-m+1},\ldots,\tm_t,r_t)
@@ -526,13 +538,74 @@ p(\iota_0)\left\{\prod_{i=1}^{m}p(\tm_i,r_i\,|\,\iota_0,\vec{\tau}^-_{1,i-1},\vr
 \end{eqnarray}
 For the special case of $m=1$, the forward pass reduces to
 \begin{eqnarray}
-\alpha_1(r_1)~=~ p(\ui)\,p(\tm_1,r_1\,|\,\ui)\,, &&
-\alpha_{t+1}(r_{t+1})~=~
+\alpha_1(r_1) & = &  \sum_{\iota_0=0}^{1}\delta(\iota_0\!=\!\ui)\,
+p(\iota_0)\,p(\tm_1,r_1\,|\,\iota_0)\,,
+\nonumber\\
+\alpha_{t+1}(r_{t+1}) & = &
 \sum_{r_{t}\in{\cal R}} \delta(r_{t}\!=\!\ur_{t})\,\alpha_t(r_{t})
 \,p(\tm_{t+1},r_{t+1}\,|\,\tm_{t},r_{t})\,.
 \end{eqnarray}
 
-**backward pass**
+Similarly, for  stages $t\ge m$
+the backward factor~\eqref{eq:bwd-pass-basic} becomes
+\begin{eqnarray}
+\beta_t(\vr_{t-m+1,t}) & = & 
+p(\tm_{t+1},\ur_{t+1},\ldots,\tm_n,\ur_n,\ut\,|\,\tm_{t-m+1},r_{t-m+1},\ldots,\tm_t,r_t)
+\nonumber\\& = &
+\sum_{r_{t+1}\in{\cal R}} \delta(r_{t+1}\!=\!\ur_{t+1})\,\cdots
+\sum_{r_{n}\in{\cal R}} \delta(r_{n}\!=\!\ur_{n})\,
+\sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut_{n+1})
+\nonumber\\
+&&{}
+\left\{\prod_{i=t+1}^n
+p(\tm_{i},r_{i}\,|\,\vec{\tau}^-_{i-m,i-1},\vr_{i-m,i-1})\right\}
+p(\tau_{n+1}\,|\,\vec{\tau}^-_{n-m+1,n},\vr_{n-m+1,n})
+\,.
+\end{eqnarray}
+Furthermore, if $t>m$ then we may move backward to stage $t-1$ to obtain the recursive relationship
+\begin{eqnarray}
+\beta_{t-1}(\vr_{t-m,t-1}) & = & 
+p(\tm_{t},\ur_{t},\ldots,\tm_n,\ur_n,\ut\,|\,\tm_{t-m},r_{t-m},\ldots,\tm_{t-1},r_{t-1})
+\nonumber\\& = &
+\sum_{r_{t}\in{\cal R}} \delta(r_{t}\!=\!\ur_{t})\,\cdots
+\sum_{r_{n}\in{\cal R}} \delta(r_{n}\!=\!\ur_{n})\,
+\sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut_{n+1})
+\nonumber\\
+&&{}
+\left\{\prod_{i=t}^n
+p(\tm_{i},r_{i}\,|\,\vec{\tau}^-_{i-m,i-1},\vr_{i-m,i-1})\right\}
+p(\tau_{n+1}\,|\,\vec{\tau}^-_{n-m+1,n},\vr_{n-m+1,n})
+\nonumber\\& = &
+\sum_{r_{t}\in{\cal R}} \delta(r_{t}\!=\!\ur_{t})\,
+p(\tm_{t},r_{t}\,|\,\vec{\tau}^-_{t-m,t-1},\vr_{t-m,t-1})\,\beta_{t}(\vr_{t-m+1,t})
+\,.
+\end{eqnarray}
+
+stages $t<m$ 
+\begin{eqnarray}
+\beta_t(\vr_{1,t}) & = & 
+p(\tm_{t+1},\ur_{t+1},\ldots,\tm_n,\ur_n,\ut\,|\,\iota_0,\tm_{1},r_{1},\ldots,\tm_t,r_t)\,,
+\end{eqnarray}
+
+In general, the backward pass is defined via
+\begin{eqnarray}
+\beta_{t-1}(\vr_{t-m,t-1}) & = & 
+\sum_{r_{t}\in{\cal R}} \delta(r_{t}\!=\!\ur_{t})\,
+p_m^*(\tm_{t},r_{t}\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vr_{1,t-1})\,\beta_{t}(\vr_{t-m+1,t})
+\,.
+\end{eqnarray}
+For the special case of $m=1$, the backward pass reduces to
+\begin{eqnarray}
+\beta_n(r_n) & = &  \sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut)\,
+p(\tau_{n+1}\,|\,\tm_n,r_n)\,,
+\nonumber\\
+\beta_{t-1}(r_{t-1}) & = &
+\sum_{r_{t}\in{\cal R}} \delta(r_{t}\!=\!\ur_{t})\,
+p(\tm_{t},r_{t}\,|\,\tm_{t-1},r_{t-1})
+\,\beta_t(r_{t})
+\,.
+\end{eqnarray}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Stateful Markov Sequence Processes}
